Fix blurry cursor on safari

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -40,6 +40,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    transform: translateZ(0);
     p {
         color: $black;
         text-align: center;
